# cvxgen_test

./: .gitignore  CMakeLists.txt  README.md  build.sh
cvxgen/: CMakeLists.txt  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  testsolver.c  util.c
include/: solver.h
src/: CMakeLists.txt  main.cpp
